Preventing columns from wrapping in playground.

--- a/src/stylus/challenges.styl
+++ b/src/stylus/challenges.styl
@@ -43,10 +43,11 @@
     margin: 160px 0 30px -100px;
   }
 
-  #genome-playground #change-sex-buttons {
-    margin: 60px 0 30px -100px;
-  }
-
+  #genome-playground
+    display: flex;
+    #change-sex-buttons
+      margin: 60px 0 30px -100px;
+      
   #genome-challenge #change-sex-buttons {
     margin: 60px 0 0 0;
   }
